# SpeakMCP

./: .augment-guidelines  .env.audit.example  .env.example  .env.template  .gitignore  AGENTS.md  ANALYSIS_continuous_claude_improvements.md  APPLE_SIGNING_GUIDE.md  AUDIT_AGENT_QUICKSTART.md  AUTO_DETECTION_GUIDE.md  BRAINSTORM-355.md  BUILDING.md  BUILD_ISSUES.md  CHANGES_SUMMARY.md  CLAUDE.md  CLI-TASKS.md  CLOUDFLARE_524_FIX.md  COMMIT_MESSAGE.txt  COMPLEX_VARIABLE_NAMES_REPORT.md  CONSOLE_LOGGER_SUMMARY.md  CONTEXT_OVERFLOW_FIX.md  DEBUGGING.md  DEBUG_LLM_GUIDE.md  DEBUG_LOGGING_IMPLEMENTATION_SUMMARY.md  DEBUG_LOGGING_TEST_PLAN.md  DEVELOPMENT.md  DEV_SETUP.md  Dockerfile  ELECTRON_SETTINGS_STORAGE_GUIDE.md  FEATURE_COMPLETE.md  FINAL_FIXES_RECORDING_UI.md  FIXES_APPLIED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  ISSUE_215_SUMMARY.md  LLM_REQUEST_FLOW.md  LONG_VARIABLE_NAMES_REPORT.md  MAC_APP_STORE_BUILD_SUCCESS.md  (+71 more)
apps/cli/: AGENTS.md  Cargo.toml  FEATURE-PARITY-SPEC.md  PROMPT.md  README.md  agents.md  package-lock.json  package.json  prd.json  prd.md  progress.txt  tsconfig.json
apps/cli/e2e/: SPEC.md  agents.md  setup.ts  vitest.e2e.config.ts
apps/cli/e2e/critical-path/: chat.e2e.ts  sessions.e2e.ts  settings.e2e.ts
apps/cli/parity/: README.md  generate-ux-summary.mjs  parity-matrix.json  run-parity.mjs  verify-matrix.mjs
apps/cli/src/: api.rs  app.ts  client.ts  config-file.ts  config.rs  config.ts  index.ts  main.rs  output.rs  repl.rs  setup.ts  sse.rs  types.rs  types.ts
(+973 files in other folders)
