[package]
name = "speakmcp-cli"
version = "1.0.0"
edition = "2021"
description = "A lightweight CLI frontend for SpeakMCP - alternative to the Electron app"
authors = ["SpeakMCP Team"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/aj47/SpeakMCP"
keywords = ["mcp", "voice", "ai", "cli", "agent"]

[[bin]]
name = "speakmcp"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Configuration file handling
dirs = "6"
toml = "0.8"

# Terminal UI
crossterm = "0.28"

# Error handling
thiserror = "2"
anyhow = "1"

# Colored terminal output
colored = "3"

# For streaming responses
futures-util = "0.3"
tokio-stream = "0.1"

[profile.release]
strip = true
lto = true
opt-level = "z"
